--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -20,7 +20,8 @@
 
 <div class="d-grid gap-2">
 <a href="{%url 'add'%}" type="button" class="btn btn-primary">ADD DUE</a><br><br><br>
-<a href="{%url 'check'%}" type="button" class="btn btn-primary">CHECK DUE</a>
+<a href="{%url 'check'%}" type="button" class="btn btn-primary">CHECK DUE</a><br><br><br>
+<a href="{%url 'checkall'%}" type="button" class="btn btn-primary">CHECK TOTAL DUE</a>
 <a href="{%url 'history'%}">Paid History</a>
 </div>
 
